# urantia-render

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.ots  README.md  TODO.md  YOUTUBE_UPLOAD_GUIDE.md
aws-batch/: launch.md  user-data.sh
docs/: aws-batch-research-prompt.md
docs/superpowers/plans/: 2026-04-17-4k-video-bigger-text-audio-gaps.md
output/manifests/: 1.json
src/: config.rs  main.rs  text_util.rs
src/audio/: concat.rs  download.rs  mod.rs
src/data/: audio_manifest.rs  manifest.rs  mod.rs  paper.rs  text_chunker.rs
src/encode/: ffmpeg.rs
src/metadata/: youtube.rs
src/render/: background.rs  cards.rs  compositor.rs  frame.rs  mod.rs  pipeline.rs  text.rs
src/upload/: r2.rs
youtube-sync/: .gitignore  README.md  check_comments.py  com.urantia.uploader.plist.template  orchestrator.py  sync.py  test_comment.py  yt_comment_bot.py
