[package]
name = "urantia-render"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# 2D rendering
tiny-skia = "0.11"

# Text layout
cosmic-text = "0.12"

# Audio decode
symphonia = { version = "0.5", features = ["mp3"] }

# Video encoding (ffmpeg via subprocess — no crate needed)

# S3/R2 upload
rust-s3 = { version = "0.35", features = ["tokio-rustls-tls"], default-features = false }

# Parallelism
rayon = "1.10"

# Progress bars
indicatif = "0.17"

# Env vars
dotenvy = "0.15"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
